components/konflux-rbac/policies/bootstrap-tenant-namespace/.chainsaw-test/resources/actual-appstudio-pipeline-clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: appstudio-pipelines-runner
rules:
- apiGroups:
  - autoscaling
  resources:
  - horizontalpodautoscalers
  - horizontalpodautoscalers/status
  verbs:
  - get
  - list
  - watch
  - patch
  - update
  - create
