components/konflux-rbac/policies/bootstrap-tenant-namespace/.chainsaw-test/resources/actual-existing-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: appstudio-pipelines-runner-rolebinding
  namespace: (join('-', [$namespace, $suffix]))
  labels:
    already-existing: expected-not-to-be-removed
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: appstudio-pipelines-runner-not-to-be-changed
subjects:
- kind: ServiceAccount
  namespace: (join('-', [$namespace, $suffix]))
  name: appstudio-pipeline
- kind: ServiceAccount
  namespace: (join('-', [$namespace, $suffix]))
  name: third-party-serviceaccount
