components/konflux-rbac/policies/bootstrap-tenant-namespace/.chainsaw-test/chainsaw-assert-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: generate-tenant-resources-admission
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
