components/konflux-rbac/policies/bootstrap-tenant-namespace/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: konfluxci-bootstrap-ns-mutate-new-namespace-konfluxcidev
spec:
  description: |
    tests that the RoleBinding is created in a namespace
    labeled with `konflux-ci.dev/type=tenant`
  concurrent: false
  namespace: 'pipelinesa-generate-new-namespace'
  bindings:
  - name: suffix
    value: labeled 
  steps:
  - name: pipelinesa-given-appstudio-pipeline-clusterrole-exists
    try:
    - apply:
        file: ./resources/actual-appstudio-pipeline-clusterrole.yaml
  - name: pipelinesa-given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../kyverno_rbac.yaml
  - name: pipelinesa-given-cluster-policy-is-ready
    try:
    - apply:
        file: ../bootstrap-tenant-namespace-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: pipelinesa-when-konfluxcidev-labeled-namespace-is-created
    try:
    - apply:
        file: resources/actual-namespace-konfluxcidev.yaml
        template: true
  - name: pipelinesa-then-rolebinding-is-created
    try:
    - assert:
        file: resources/expected-rolebinding.yaml
        template: true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: konfluxci-bootstrap-ns-mutate-updated-namespace-konfluxcidev
spec:
  description: |
    tests that the RoleBinding is created in an unlabeled namespace
    when it is updated to have the label `konflux-ci.dev/type=tenant`
  concurrent: false
  namespace: 'pipelinesa-generate-new-namespace'
  bindings:
  - name: suffix
    value: updated-labeled
  steps:
  - name: pipelinesa-given-appstudio-pipeline-clusterrole-exists
    try:
    - apply:
        file: ./resources/actual-appstudio-pipeline-clusterrole.yaml
  - name: pipelinesa-given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../kyverno_rbac.yaml
  - name: pipelinesa-given-cluster-policy-is-ready
    try:
    - apply:
        file: ../bootstrap-tenant-namespace-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: pipelinesa-given-unlabeled-namespace-exists
    try:
    - apply:
        file: resources/actual-namespace-unlabeled.yaml
        template: true
  - name: pipelinesa-given-rolebinding-does-not-exist
    try:
    - delete:
        file: resources/expected-rolebinding.yaml
        template: true
        expect:
        - check:
            ($error != null): true
  - name: pipelinesa-when-konfluxcidev-label-is-added
    try:
    - apply:
        file: resources/actual-namespace-konfluxcidev.yaml
        template: true
  - name: pipelinesa-then-rolebinding-is-created
    try:
    - assert:
        file: resources/expected-rolebinding.yaml
        template: true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: konfluxci-bootstrap-ns-mutate-new-namespace-unlabeled
spec:
  description: |
    tests that the RoleBinding is NOT created in an unlabeled namespace
  concurrent: false
  namespace: 'pipelinesa-generate-new-namespace'
  bindings:
  - name: suffix
    value: unlabeled
  steps:
  - name: pipelinesa-given-appstudio-pipeline-clusterrole-exists
    try:
    - apply:
        file: ./resources/actual-appstudio-pipeline-clusterrole.yaml
  - name: pipelinesa-given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../kyverno_rbac.yaml
  - name: pipelinesa-given-cluster-policy-is-ready
    try:
    - apply:
        file: ../bootstrap-tenant-namespace-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: pipelinesa-when-unlabeled-namespace-is-created
    try:
    - apply:
        file: resources/actual-namespace-unlabeled.yaml
        template: true
  - name: pipelinesa-then-rolebinding-is-created
    try:
    - delete:
        file: resources/expected-rolebinding.yaml
        template: true
        expect:
        - check:
            ($error != null): true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: konfluxci-bootstrap-ns-mutate-existing-namespace-konfluxcidev
spec:
  description: |
    tests that the RoleBinding is NOT created in an already existing
    namespace labeled with `konflux-ci.dev/type=tenant`
  concurrent: false
  namespace: 'pipelinesa-generate-existing-namespace'
  bindings:
  - name: suffix
    value: labeled
  steps:
  - name: pipelinesa-given-appstudio-pipeline-clusterrole-exists
    try:
    - apply:
        file: ./resources/actual-appstudio-pipeline-clusterrole.yaml
  - name: pipelinesa-given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../kyverno_rbac.yaml
  - name: pipelinesa-given-konfluxci-labeled-namespace-is-created
    try:
    - apply:
        file: resources/actual-namespace-konfluxcidev.yaml
        template: true
  - name: pipelinesa-when-cluster-policy-is-ready
    try:
    - apply:
        file: ../bootstrap-tenant-namespace-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: pipelinesa-then-rolebinding-is-created
    try:
    - delete:
        file: resources/expected-rolebinding.yaml
        template: true
        expect:
        - check:
            ($error != null): true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: konfluxci-bootstrap-ns-mutate-existing-namespace-unlabeled
spec:
  description: |
    tests that the RoleBinding is NOT created in an 
    existing unlabeled namespace
  concurrent: false
  namespace: 'pipelinesa-generate-existing-namespace'
  bindings:
  - name: suffix
    value: unlabeled
  steps:
  - name: pipelinesa-given-appstudio-pipeline-clusterrole-exists
    try:
    - apply:
        file: ./resources/actual-appstudio-pipeline-clusterrole.yaml
  - name: pipelinesa-given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../kyverno_rbac.yaml
  - name: pipelinesa-given-unlabeled-namespace-is-created
    try:
    - apply:
        file: resources/actual-namespace-unlabeled.yaml
        template: true
  - name: pipelinesa-when-cluster-policy-is-ready
    try:
    - apply:
        file: ../bootstrap-tenant-namespace-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: pipelinesa-then-rolebinding-is-created
    try:
    - delete:
        file: resources/expected-rolebinding.yaml
        template: true
        expect:
        - check:
            ($error != null): true
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: konfluxci-bootstrap-ns-mutate-existing-namespace-konfluxcidev-existing-rolebinding
spec:
  description: |
    tests that the RoleBinding is not updated in an already existing
    namespace labeled with `konflux-ci.dev/type=tenant` where the 
    RoleBinding already exists
  concurrent: false
  namespace: 'pipelinesa-generate-existing-namespace'
  bindings:
  - name: suffix
    value: labeled
  steps:
  - name: pipelinesa-given-appstudio-pipeline-clusterrole-exists
    try:
    - apply:
        file: ./resources/actual-appstudio-pipeline-clusterrole.yaml
  - name: pipelinesa-given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../kyverno_rbac.yaml
  - name: pipelinesa-given-konfluxcidev-labeled-namespace-is-created
    try:
    - apply:
        file: resources/actual-namespace-konfluxcidev.yaml
        template: true
  - name: pipelinesa-given-rolebinding-is-created
    try:
    - apply:
        file: resources/actual-existing-rolebinding.yaml
        template: true
  - name: pipelinesa-when-cluster-policy-is-ready
    try:
    - apply:
        file: ../bootstrap-tenant-namespace-clusterpolicy.yaml
    - assert:
        file: chainsaw-assert-clusterpolicy.yaml
  - name: pipelinesa-then-rolebinding-is-not-changed
    try:
    - assert:
        file: resources/actual-existing-rolebinding.yaml
        template: true
